--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/assets/potara-symbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Potara</title>
+
+     <!-- Sharing -->
+
+    <meta property="og:title" content="Potara" />
+    <meta property="og:description" content="Make Drawing Simple." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.potara.art/" />
+    <meta property="og:image" content="/src/assets/potara-logo.png" />
+
+    <meta name="twitter:title" content="Potara" />
+    <meta name="twitter:description" content="Make Drawing Simple." />
+    <meta property="twitter:domain" content="potara.art" />
+    <meta property="twitter:url" content="https://www.potara.art/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="/src/assets/potara-logo.png" />
   </head>
   <body>
     <div id="root"></div>
